--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,11 +50,51 @@
         android:layout_below="@+id/redSB"
         android:layout_alignParentStart="true" />
 
-    <!--TODO: SeekBar for blue -->
+    <SeekBar
+        android:id="@+id/greenSB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/green"
+        android:max="255" />
 
-    <!--TODO: TextView for blue -->
-    <!--TODO: SeekBar for blue -->
+    <TextView
+        android:id="@+id/blue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/greenSB"
+        android:layout_marginTop="14dp"
+        android:text="@string/blue"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <!--TODO: TextView for alpha -->
-    <!--TODO: SeekBar for alpha -->
+    <SeekBar
+        android:id="@+id/blueSB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/blue"
+        android:max="255" />
+
+    <TextView
+        android:id="@+id/alpha"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/blueSB"
+        android:text="@string/alpha"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <SeekBar
+        android:id="@+id/alphaSB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/alpha"
+        android:max="255" />
+
+
 </RelativeLayout>
